minor change - update contact link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1 class="profile">Front End Developer</h1>
             <p class="short_bio">An EXTC Engineer who entered this field of  web development, surfing in the ocean 
                 of youtube and udemy lectures.</p>
-            <p class="contact__me"><a href="./about/index.html">Contact</a></p>
+            <p class="contact__me"><a href="./contact/index.html">Contact</a></p>
         </section>
         <section class="main-right">
             <img src="./images/working.png" alt="shhh....am working">
